fix: articles without TOC alignment

--- a/app/[category]/[article]/styles.module.scss
+++ b/app/[category]/[article]/styles.module.scss
@@ -1,8 +1,11 @@
 @media (min-width: 1024px) {
   .container {
+    width: 100%;
+
     > div {
       display: flex;
       flex-direction: row-reverse;
+      justify-content: flex-end;
     }
   }
 }
